# video-progress

./: .gitignore  README.md  config.json  demo_usage.py  enhanced_progress_bar.py  main.py  panda_config.json  pikachu_progress_bar.py  pyproject.toml  run.sh  video_progress.py  皮卡丘进度条说明.md  素材下载指南.md
configs/: default.json  fancy.json
examples/: demo_usage.py
src/video_progress_pkg/: __init__.py  core.py
video_progress_pkg/: cli.py  core.py
