[project]
name = "video-progress-pkg"
version = "1.0.0"
description = "Flexible video progress bar overlay tool with animated characters"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "AI Assistant"}
]
license = "MIT"
keywords = ["video", "progress", "overlay", "animation", "gif"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.21.0",
    "moviepy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/video-progress-pkg"
Documentation = "https://github.com/your-username/video-progress-pkg#readme"
Repository = "https://github.com/your-username/video-progress-pkg.git"
Issues = "https://github.com/your-username/video-progress-pkg/issues"

[tool.setuptools]
# 指定源代码位于src目录
package-dir = {"" = "src"}

[tool.setuptools.package-data]
# 包含包内的资源文件（只包含角色GIF）
"video_progress_pkg" = ["assets/characters/*"]